restructure data services
Use one constructor type for all data services, and begin to remove the unneeded reward functions